ab-testing/ab-testing/ab-testing-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
        version: v1
    spec:
      containers:
      - name: ui
        image: devengers/ui:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ui-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ui
        version: v2
    spec:
      containers:
      - name: myapp
        image: devengers/ui:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
