ab-testing/ab-testing/ab-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ui
spec:
  host: ui
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
